theme/2014/static/scss/menu.scss
//sass-lint:disable max-file-line-count
$darkblue: rgba(29, 79, 114, 1);
$dottedblue: rgba(66, 139, 202, 1);
$gray: rgba(128, 128, 128, 1);
$menublack: rgba(7, 27, 47, 1);
$menublackopacity: rgba(7, 27, 47, .2);
$menublue: rgba(20, 88, 142, 1);
$submenublue: rgba(27, 117, 187, 1);
$transparent: rgba(0, 0, 0, 0);
$transparentblack: rgba(0, 0, 0, .5);
$white: rgba(255, 255, 255, 1);

@mixin link {
  color: $white;
  display: block;
  text-transform: uppercase;

  &:hover {
    background-color: $darkblue;
    color: $white;
  }
}

@mixin menu-pseudo {
  content: '';
  left: 185px;
  position: absolute;
  width: 20px;
}

@mixin active-pseudo {
  background: $white;
  top: 35px;
  width: 18px;
}

@mixin sm-pseudo {
  background: $white;
  content: '';
  position: absolute;
}

.cssmenu {
  background: $menublue;
  line-height: 1;
}

.m-closed,
.sm-closed {
  display: none;
}

.m-link {
  @include link;
  font-size: 16px;
  letter-spacing: 1px;
  min-height: 60px;
  padding: 22px 10px 17px;
}

.m-opened {
  background: $submenublue;
  border-top: 5px solid $darkblue;
  display: block;
  margin: 0;
  padding: 0;

  li {
    border-top: 1px dotted $dottedblue;
    display: block;
    line-height: 1;
    margin-top: 0;
    min-height: 60px;
    position: relative;
    width: 100%;
  }
}

.menu-button {
  @include link;
  border-bottom: 5px solid $darkblue;
  cursor: pointer;
  font-size: 20px;
  padding: 26px 115px 21px;
  position: relative;
  z-index: 1;

  &::before {
    @include menu-pseudo;
    background: $white;
    height: 2px;
    top: 29px;
  }

  &::after {
    @include menu-pseudo;
    border-bottom: 2px solid $white;
    border-top: 2px solid $white;
    height: 8px;
    top: 35px;
  }

  &.menu-opened {
    &::before {
      @include active-pseudo;
      transform: rotate(-45deg);
    }

    &::after {
      @include active-pseudo;
      border: 0;
      height: 2px;
      transform: rotate(45deg);
    }
  }
}

.sm-link {
  @include link;
  font-size: 13px;
  height: 100%;
  letter-spacing: 0;
  padding: 24px 30px 0 25px;
  width: 100%;
}

.sm-opened {
  border-top: 0;
  display: block;
  padding: 0;
  position: relative;

  li {
    border-top: 1px dotted $dottedblue;
    height: 61px;
  }
}

.submenu-button {
  border-left: 1px dotted $dottedblue;
  cursor: pointer;
  display: block;
  height: 60px;
  position: absolute;
  right: 0;
  top: 0;
  width: 45px;

  &:hover {
    background: $darkblue;
  }

  &.submenu-opened {
    background: $darkblue;

    &::before {
      display: none;
    }

    &::after {
      background: $white;
    }
  }

  &::before {
    @include sm-pseudo;
    height: 10px;
    right: 22px;
    top: 26px;
    width: 2px;
  }

  &::after {
    @include sm-pseudo;
    height: 2px;
    right: 18px;
    top: 30px;
    width: 10px;
  }
}

.fluid-screw {
  float: left;
  left: 2px;
  margin-right: 20px;
  position: relative;
  top: 27px;
  width: 100px;
  z-index: 2;
}

.menubar {
  position: fixed;
  width: 100%;
  z-index: 1;
}

.intro-header {
  padding-top: 72px;

  img {
    width: 100%;
  }
}

@media (min-width: 400px) {
  .fluid-screw {
    top: 23px;
    width: 150px;
  }

  .menu-button {
    &::before,
    &::after {
      left: 235px;
    }
  }
}

@media (min-width: 900px) {
  .intro-header {
    padding-top: 0;
  }

  .cssmenu {
    background-color: transparent;
    height: 72px;
    transition: background-color .2s;
  }

  .has-sub {
    a {
      padding-right: 25px;
    }

    &:hover {
      ul {
        background: $menublack;
        display: block;
        transition: background-color .2s;
      }

      &::before {
        display: none;
      }
    }

    &::before {
      @include sm-pseudo;
      height: 8px;
      right: 12px;
      top: 32px;
      width: 2px;
    }

    &::after {
      @include sm-pseudo;
      height: 2px;
      right: 9px;
      top: 35px;
      width: 8px;
    }
  }

  .m-opened {
    background-color: $menublackopacity;
    border-top: 0;
    min-height: 72px;
    transition: background-color .2s;

    li {
      border-top: 0;
      display: inline-block;
      min-height: 72px;
      padding-top: 7px;
      width: auto;

      &:hover {
        background-color: $transparentblack;
      }
    }
  }

  .m-link {
    &:hover {
      background-color: $transparent;
    }
  }

  .menu-button,
  .submenu-button {
    display: none;
  }

  .sm-opened {
    display: none;
    position: absolute;

    li {
      border-top: 1px dotted $gray;
      min-height: 61px;
      min-width: 260px;
      padding-top: 0;
    }
  }

  .fluid-screw {
    left: 6px;
    margin-right: 5px;
  }

  .css-scrolled {
    background-color: $menublue;
    border-bottom: 5px solid $darkblue;
    transition: background-color .2s;
  }

  .m-scrolled {
    background-color: $menublue;
    min-height: auto;
    transition: background-color .2s;

    li {
      min-height: auto;

      &:hover {
        background-color: $darkblue;
      }
    }
  }

  .has-sub-scrolled {
    &:hover {
      ul {
        background: $menublue;
      }
    }
  }
}

